<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B39DDB"
    tools:context=".MainActivity">

    <include
        android:id="@+id/app_bar_layout_main_activity"
        layout="@layout/layout_app_bar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout_main_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp">

            <TextView
                android:id="@+id/tv_title_course_list_2023_main_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_input_first_name_main_activity"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:autofillHints="name"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="#616161"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_course_list_2023_main_activity" />

            <EditText
                android:id="@+id/et_input_last_name_main_activity"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="#616161"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_first_name_main_activity" />

            <EditText
                android:id="@+id/et_input_course_name_main_activity"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="name"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_course_name"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="#616161"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_last_name_main_activity" />

            <EditText
                android:id="@+id/et_input_phone_number_main_activity"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:autofillHints="phone"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:paddingHorizontal="16dp"
                android:textColor="@color/black"
                android:textColorHint="#616161"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_course_name_main_activity" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear_main_activity"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/btn_clear"
                android:textAllCaps="true"
                app:cornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_phone_number_main_activity" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_main_activity"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/btn_save"
                android:textAllCaps="true"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_phone_number_main_activity" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_finish_main_activity"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="92dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/btn_finish"
                android:textAllCaps="true"
                app:backgroundTint="@null"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_phone_number_main_activity" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>